# InkEra-Studio

./: .gitignore  .project  ATTENTION.md  CHANGELOG.md  Guide.docx  InkEra-Studio-Architecture.md  README.md  README.md.md  config.properties  pom.xml  ~WRL0003.tmp
.metadata/: .lock_info  version.ini
.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
.obsidian/: workspace.json
src/: module-info.java
src/deneme/: BracketPanel.java  CustomRadioButton.java  CustomRadioButtonExample.java  DrawingApp.java
src/inkera/languages/: LanguageSelectionPanel.java  Languages.java
src/inkera/layers/: LayerKit.java
src/inkera/main/: DrawingWindow.java  MainMenuFrame.java
src/inkera/projects/: ProjectInfo.java
src/inkera/splashscreen/: LoadingScreen.java  SplashScreenKit.java
src/inkera/ui/SidePanelComponentSettings/: ColorWheelPanel.java  SidePanelBrush.java  SidePanelEraser.java  SidePanelMove.java  SidePanelPaintBucket.java
src/inkera/ui/account/: AccountManager.java  ChangePasswordDialog.java  ForgotPasswordDialog.java  SignInDialog.java  SignUpDialog.java  VerificationDialog.java
src/inkera/ui/canvas/: Canvas.java  CanvasPanel.java  (+1 more)
src/inkera/util/: ColorConsole.java
src/main/cpp/: CMakeLists.txt  Canvas.hpp  InkEraEngine.cpp  InkEraEngine.h  Layer.hpp  LayerManager.hpp  Pencil.hpp  README.md  Tool.hpp
src/main/java/: module-info.java
(+73 files in other folders)
